Added additional LM test

--- a/Ultimatum_Game.ipynb
+++ b/Ultimatum_Game.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -195,6 +195,33 @@
         "plt.title('Acceptance rate by gender pairing')\n",
         "plt.legend()\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 5. Additional LM Tests #"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "client = openai.OpenAI(api_key = openai_key)\n",
+        "\n",
+        "input_prompt = \"What is the probability a fair dice roll will result in an even numer? Answer with the percentage ONLY.\"\n",
+        "\n",
+        "for i in range(0, 3):\n",
+        "    response = client.completions.create(\n",
+        "            model=\"davinci-002\",\n",
+        "            prompt = input_prompt,\n",
+        "            max_tokens=20,\n",
+        "        )\n",
+        "\n",
+        "    print(response.choices[0].text)"
       ]
     }
   ],
