--- a/Ultimatum_Game.ipynb
+++ b/Ultimatum_Game.ipynb
@@ -201,20 +201,39 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 5. Additional LM Tests #"
+        "# 5. Additional LM Test #\n",
+        "Small test to see how davinci-002 will respond to completion prompts."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " If you use words you will be disqualified from this question. To answer, Click HERE\n",
+            "\n",
+            "11.\n",
+            " 1 Answer This is a two part solution first finding the probability from a standard 6 sided die\n",
+            " N/A.???? Please explain? I don't know how to explain… Marie's wedding gift can\n",
+            " Perfect solutions require 25 points.\n",
+            "\n",
+            "I have 2 questions that i need help with. I also\n",
+            " Spoiler inside\n",
+            "\n",
+            "SOLVED: Using binomial nb random variables why does $\\mathbb{\n"
+          ]
+        }
+      ],
       "source": [
         "client = openai.OpenAI(api_key = openai_key)\n",
         "\n",
-        "input_prompt = \"What is the probability a fair dice roll will result in an even numer? Answer with the percentage ONLY.\"\n",
+        "input_prompt = \"What is the probability a fair 6-sided dice roll will result in an even number? Answer with the percentage ONLY.\"\n",
         "\n",
-        "for i in range(0, 3):\n",
+        "for i in range(0, 5):\n",
         "    response = client.completions.create(\n",
         "            model=\"davinci-002\",\n",
         "            prompt = input_prompt,\n",
