--- a/Ultimatum_Game.ipynb
+++ b/Ultimatum_Game.ipynb
@@ -201,30 +201,30 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 5. Additional LM Test #\n",
-        "Small test to see how davinci-002 will respond to completion prompts."
+        "# 4. LM Completion Test #\n",
+        "Test to see how davinci-002 will respond to completion prompts."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " If you use words you will be disqualified from this question. To answer, Click HERE\n",
+            " Contact me directly if you have any questions\n",
             "\n",
-            "11.\n",
-            " 1 Answer This is a two part solution first finding the probability from a standard 6 sided die\n",
-            " N/A.???? Please explain? I don't know how to explain… Marie's wedding gift can\n",
-            " Perfect solutions require 25 points.\n",
+            "3. What the the mean and standard deviation of the\n",
+            " This question is not a math question, it relies on mathematical logic.\n",
             "\n",
-            "I have 2 questions that i need help with. I also\n",
-            " Spoiler inside\n",
+            "I am asking for either or\n",
+            " is there a way to not make excel round correctly? I have a column that twists numbers around with\n",
+            " The top of each cell displays the cumulative number of trials completed that result in the given value. A\n",
+            " Not using '$P(even)' or rock, paper, scissors.\n",
             "\n",
-            "SOLVED: Using binomial nb random variables why does $\\mathbb{\n"
+            "This smart quiz finds your knowledge\n"
           ]
         }
       ],
